# novajs

./: CONTRIBUTING.md  Cargo.toml
.github/workflows/: ci.yml
benches/: Cargo.toml  criterion.rs  gungraun.rs  runner.rs
benches/scripts/boa/: clean_js.js  mini_js.js
benches/scripts/simple/: binary-trees.js
