[package]
name = "benches"
version = "0.1.0"
edition = "2024"
publish = false

[[bench]]
# Microbenchmarks measuring wall-time using criterion.rs
# Needs a consistent environment for results to be comparable
name = "criterion"
harness = false
path = "criterion.rs"
required-features = ["criterion"]

[[bench]]
# Microbenchmarks measuring cpu-cycles using valgrind
# Ideal for inconsistent environments like CI
# Requires valgrind and gungraun-runner to be installed
name = "gungraun"
harness = false
path = "gungraun.rs"
required-features = ["gungraun"]

[features]
criterion = ["dep:criterion"]
gungraun = ["dep:gungraun"]

[dependencies]
criterion = { version = "0.7.0", optional = true }
gungraun = { version = "0.17.0", optional = true }
nova_vm = { path = "../nova_vm", version = "0.3.0" }
